Remove the dependency on blaze.args

--- a/lib/dune
+++ b/lib/dune
@@ -8,4 +8,4 @@
  (name srv)
  (modules srv)
  (public_name blaze.srv)
- (libraries fpath sendmail.starttls rresult blaze.args colombe))
+ (libraries fpath sendmail.starttls rresult blaze.ldns ipaddr.unix colombe))
